# waggle-os

./: .dockerignore  .env.example  .gitattributes  .gitignore  .parity-allowlist  AUDIT-REPORT.md  CLAUDE-waggle-poc.md  CLAUDE.md  Dockerfile  EVAL-RESULTS-V5.md  EVAL-RESULTS.md  README.md  RELEASE-CHECKLIST.md  SENTINEL-DAEMON-SPEC.md  WAGGLE-OS-CATCHUP-SCOPE-2026-03-30.md  WAGGLE-PRODUCTION-POLISH-PLAN.md  WAGGLE_E2E_STABILIZATION_PROMPT.md  Waggle_Competitive_Intelligence_Full_Landscape_March_2026.docx  competitive-intel-claude-skills-ecosystem-2026-03-30.md  cowork-department-prompts-analysis-2026-03-30.md  cowork-vs-waggle-strategic-analysis-2026-03-30.md  docker-compose.production.yml  docker-compose.yml  litellm-config.yaml  package-lock.json  package.json  pai-strategic-analysis-2026-03-30.md  playwright-e2e.config.ts  playwright.config.ts  render.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  waggle-os-orchestrator-analysis.md  waggle-os-test-report-2026-03-28.md  waggle-os-user-evaluation-2026-03-29.md
.github/: sync.md
.lovable/: plan.md
app/: .gitignore  index.html  (+4 more)
app/src-tauri/: Cargo.toml  tauri.build-override.conf.json  tauri.conf.json  tauri.dev-override.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/nsis/: installer.nsi
app/src-tauri/resources/: service.js
app/src-tauri/src/: lib.rs  main.rs  service.rs  tray.rs
app/src-tauri/src/commands/: agent.rs  http.rs  memory.rs  mod.rs  onboarding.rs  wiki.rs
(+1157 files in other folders)
